feat: adicionar Zustand para gerenciamento de estado do timer e otimizar componentes de timer

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-router-dom": "^7.10.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
