feat: Add design system documentation and UI components for TickTask
- Created a comprehensive design system document outlining visual standards, typography, color palette, and component styles using Tailwind CSS.
- Added a dashboard mockup image to visualize the application layout.
- Implemented reusable UI components in TypeScript, including buttons, cards, badges, and progress bars, to enhance the user interface.
- Developed pages for task management, including task list, single task details, and archived tasks, with appropriate state management and interactions.
- Introduced a modal for creating new tasks with input validation and time limit handling.
- Added floating action button for active tasks to improve user experience.
- Included images for single task view and dashboard layout.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -21,13 +21,16 @@ nsis:
   shortcutName: ${productName}
   uninstallDisplayName: ${productName}
   createDesktopShortcut: always
+mac:
+  category: public.app-category.productivity
+  icon: build/icon.icns
 linux:
   target:
     - AppImage
     - deb
   maintainer: ticktask@github.com
   category: Utility
-  icon: build/icon.png
+  icon: build/icons
 appImage:
   artifactName: ${name}-${version}.${ext}
 deb:
