feat: integrate Notion API for task synchronization and configuration management
- Added Notion client dependency to package.json.
- Implemented Notion configuration management in main process.
- Created IPC handlers for Notion integration (get, save, clear config, test connection, sync tasks).
- Developed Notion-related functions for database creation and task synchronization in notion.ts.
- Added SettingsPage component for user configuration of Notion API key and database.
- Updated TitleBar and App components to include navigation to SettingsPage.
- Enhanced UI with connection status feedback and action buttons for testing connection and syncing tasks.
- Improved error handling and user notifications for Notion integration processes.

--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "electron-vite build && electron-builder --mac",
     "build:linux": "electron-vite build && electron-builder --linux",
-
     "dist": "npm run build && electron-builder"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "@notionhq/client": "^2.3.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
